--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JuliaBooks</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Juliabooks</h1>
+    <h1>Alurabook</h1>
 
 </body>
 
