--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
+  <title>JuliaBooks</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -61,10 +61,10 @@
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/Apachekafka.svg"
-            alt="Livro sobre apache kafka e spring boot da alura books"></div>
+            alt="Livro sobre apache kafka e spring boot da julia books"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg"
-            alt="Livro sobre liderança em design design da alura books"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
+            alt="Livro sobre liderança em design design da julia books"></div>
+        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
           <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
@@ -120,9 +120,9 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/ApacheKafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da JuliaBooks ">
         </div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da juliabooks">
         </div>
         <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
         <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
