--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      <img src="Logo.svg" alt="Logo da juliabooks" class="container__imagem">
     </div>
     <div class="container">
       <a href="#"><img src="Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
@@ -60,20 +60,20 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Apachekafka.svg"
+        <div class="swiper-slide"><img src="Apachekafka.svg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg"
+        <div class="swiper-slide"><img src="Liderança.svg"
             alt="Livro sobre liderança em design design da julia books"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da julia books">
+        <div class="swiper-slide"><img src="Javascript.svg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
-          <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
+          <img src="Guia Front-end.svg" alt="Livro Guia front end" />
         </div>
         <div class="swiper-slide">
-          <img src="img/Portugol.svg" alt="Livro sobre portugol" />
+          <img src="Portugol.svg" alt="Livro sobre portugol" />
         </div>
         <div class="swiper-slide">
-          <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
+          <img src="Acessibilidade.svg" alt="Livro sobre acessibilidade" />
         </div>
       </div>
 
