--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="images (1).jpeg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
-        <div class="swiper-slide"><img src="Liderança.svg"
+        <div class="swiper-slide"><img src="images (2).jpeg"
             alt="Livro sobre liderança em design design da julia books"></div>
-        <div class="swiper-slide"><img src="Javascript.svg" alt="Livro sobre javascript assertivo da julia books">
+        <div class="swiper-slide"><img src="images (3).jpeg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
           <img src="Guia Front-end.svg" alt="Livro Guia front end" />
