--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <div class="swiper-slide"><img src="images (3).jpeg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
-          <img src="Guia Front-end.svg" alt="Livro Guia front end" />
+          <img src="download (1).jpeg" alt="Livro Guia front end" />
         </div>
         <div class="swiper-slide">
-          <img src="Portugol.svg" alt="Livro sobre portugol" />
+          <img src="images.jpeg" alt="Livro sobre portugol" />
         </div>
         <div class="swiper-slide">
           <img src="Acessibilidade.svg" alt="Livro sobre acessibilidade" />
