--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="card__botões">
         <!-- 1º coluna -->
         <ul class="botões">
-          <li class="botões__item"><img src="Favoritos.png" alt="Favoritar livro"></li>
+          <li class="botões__item"><img src="Favoritos.svg" alt="Favoritar livro"></li>
           <li class="botões__item"><img src="Frame 98.png" alt="Adicionar no carrinho de compras"></li>
         </ul>
         <!-- 2º coluna -->
