--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="images (1).jpeg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
-        <div class="swiper-slide"><img src="images (2).jpeg"
+        <div class="swiper-slide"><img src="images-remove.bg.png"
             alt="Livro sobre liderança em design design da julia books"></div>
         <div class="swiper-slide"><img src="images (3).jpeg" alt="Livro sobre javascript assertivo da julia books">
         </div>
@@ -120,7 +120,7 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="ApacheKafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="Liderança.svg" alt="Livro sobre liderança em design da JuliaBooks ">
+        <div class="swiper-slide"><img src="images.jpeg" alt="Livro sobre liderança em design da JuliaBooks ">
         </div>
         <div class="swiper-slide"><img src="Javascript.svg" alt="Livro sobre javascript assertivo da juliabooks">
         </div>
