--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="download (1).jpeg" alt="Livro Guia front end" />
         </div>
         <div class="swiper-slide">
-          <img src="images.jpeg" alt="Livro sobre portugol" />
+          <img src="images (4).jpeg" alt="Livro sobre portugol" />
         </div>
         <div class="swiper-slide">
           <img src="Acessibilidade.svg" alt="Livro sobre acessibilidade" />
