--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
         <div class="swiper-slide"><img src="images-remove.bg.png"
             alt="Livro sobre liderança em design design da julia books"></div>
-        <div class="swiper-slide"><img src="images__3.png" alt="Livro sobre javascript assertivo da julia books">
+        <div class="swiper-slide"><img src="images (3).jpeg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
           <img src="download (1).jpeg" alt="Livro Guia front end" />
