--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="images (1).jpeg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
-        <div class="swiper-slide"><img src="images-remove.bg.png"
+        <div class="swiper-slide"><img src="images (2).jpeg"
             alt="Livro sobre liderança em design design da julia books"></div>
         <div class="swiper-slide"><img src="download (2).jpg" alt="Livro sobre javascript assertivo da julia books">
         </div>
