--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="images (1).jpeg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
-        <div class="swiper-slide"><img src="images (2).jpeg"
+        <div class="swiper-slide"><img src="downloads (3).jpg"
             alt="Livro sobre liderança em design design da julia books"></div>
         <div class="swiper-slide"><img src="download (2).jpg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
-          <img src="download (1).jpeg" alt="Livro Guia front end" />
+          <img src="download (1).jpg" alt="Livro Guia front end" />
         </div>
         <div class="swiper-slide">
           <img src="images (4).jpeg" alt="Livro sobre portugol" />
