--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <div class="swiper-slide"><img src="download (2).jpg" alt="Livro sobre javascript assertivo da julia books">
         </div>
         <div class="swiper-slide">
-          <img src="download (1).jpg" alt="Livro Guia front end" />
+          <img src="downloads(4).jpg" alt="Livro Guia front end" />
         </div>
         <div class="swiper-slide">
-          <img src="images (4).jpeg" alt="Livro sobre portugol" />
+          <img src="download(5).jpg" alt="Livro sobre portugol" />
         </div>
         <div class="swiper-slide">
           <img src="Acessibilidade.svg" alt="Livro sobre acessibilidade" />
