--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="ApacheKafka.svg"
+        <div class="swiper-slide"><img src="download(5).jpg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
         <div class="swiper-slide"><img src="images.jpeg" alt="Livro sobre liderança em design da JuliaBooks ">
         </div>
-        <div class="swiper-slide"><img src="Javascript.svg" alt="Livro sobre javascript assertivo da juliabooks">
+        <div class="swiper-slide"><img src="downloads(4).jpg" alt="Livro sobre javascript assertivo da juliabooks">
         </div>
         <div class="swiper-slide"><img src="Guia Front-end.svg" alt="Livro Guia front end"></div>
         <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol"></div>
