--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </p>
         </div>
         <!-- 2º coluna -->
-        <img src="Escritora.svg" class="descrição__imagem">
+        <img src="Escrito" class="descrição__imagem">
       </div>
 
       <!-- 2º linha -->
