--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="download(5).jpg" alt="Livro sobre portugol" />
         </div>
         <div class="swiper-slide">
-          <img src="Acessibilidade.svg" alt="Livro sobre acessibilidade" />
+          <img src="download (6).jpg" alt="Livro sobre acessibilidade" />
         </div>
       </div>
 
