--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
       <div class="card__descrição">
         <div class="descrição">
           <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+          <h2 class="descrição__titulo-livro">Loucos por livros</h2>
           <p class="descrição__texto">
-            Construindo uma aplicação integrada com a plataforma do Google.
+            loucos por livros é o novo romance de Emily Henry, autora do hit Leitura de verão. Com sua escrita leve e divertida, ela vai aquecer o coração dos leitores e mostrar um pouquinho dos bastidores do mercado editorial..
           </p>
         </div>
-        <img src="Angular.svg" class="descrição__imagem" />
+        <img src="livros azul_.png" class="descrição__imagem" />
       </div>
       <div class="card__botões">
         <ul class="botões">
