--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
           <h2 class="descrição__titulo-livro">Loucos por livros</h2>
           <p class="descrição__texto">
-            loucos por livros é o novo romance de Emily Henry, autora do hit Leitura de verão. Com sua escrita leve e divertida, ela vai aquecer o coração dos leitores e mostrar um pouquinho dos bastidores do mercado editorial..
+            loucos por livros é o novo romance de Emily Henry, autora do hit Leitura de verão. Com sua escrita leve e divertida, 
+            ela vai aquecer o coração dos leitores e mostrar um pouquinho dos bastidores do mercado editorial..
           </p>
         </div>
         <img src="livros azul_.png" class="descrição__imagem" />
@@ -104,7 +105,7 @@
         </div>
         <div class="swiper-slide"><img src="downloads(4).jpg" alt="Livro sobre javascript assertivo da juliabooks">
         </div>
-        <div class="swiper-slide"><img src="Guia Front-end.svg" alt="Livro Guia front end"></div>
+        <div class="swiper-slide"><img src="" alt="Livro Guia front end"></div>
         <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol"></div>
         <div class="swiper-slide"><img src="Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
       </div>
