--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         </div>
         <div class="swiper-slide"><img src="downloads(4).jpg" alt="Livro sobre javascript assertivo da juliabooks">
         </div>
-        <div class="swiper-slide"><img src="" alt="Livro Guia front end"></div>
-        <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol"></div>
-        <div class="swiper-slide"><img src="Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+        <div class="swiper-slide"><img src="dom qui.png" alt="Livro Guia front end"></div>
+        <div class="swiper-slide"><img src="harry.png" alt="Livro sobre portugol"></div>
+        <div class="swiper-slide"><img src="como eu.png" alt="livro sobre acessibilidade"></div>
       </div>
 
       <!-- If we need navigation buttons -->
