--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="images (3).jpeg"
+        <div class="swiper-slide"><img src="images__3.png"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
         <div class="swiper-slide"><img src="downloads (3).jpg"
             alt="Livro sobre liderança em design design da julia books"></div>
