--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="download (1).jpg"
+        <div class="swiper-slide"><img src="images (2).jpeg"
             alt="Livro sobre apache kafka e spring boot da julia books"></div>
         <div class="swiper-slide"><img src="downloads (3).jpg"
             alt="Livro sobre liderança em design design da julia books"></div>
